Modified padding and margins for Middle elements

--- a/Python.html
+++ b/Python.html
@@ -54,11 +54,11 @@
                   language whose design focus emphasizes code readability.  Whether for processing/analyzing
                   data to powering many well-known applications,
                 </p>
-                <p id="top-data-quote">Beautiful is better than ugly;</p>
-                <p id="top-data-quote">Explicit is better than implicit;</p>
-                <p id="top-data-quote">Simple is better than complex;</p>
-                <p id="top-data-quote">Complex is better than complicated;</p>
-                <p id="top-data-quote">Readability counts;</p>
+                <p class="top-data-quote">Beautiful is better than ugly;</p>
+                <p class="top-data-quote">Explicit is better than implicit;</p>
+                <p class="top-data-quote">Simple is better than complex;</p>
+                <p class="top-data-quote">Complex is better than complicated;</p>
+                <p class="top-data-quote">Readability counts;</p>
                 <p id="top-data-quote-source">The Zen of Python</p>
               </div>
 
@@ -99,7 +99,7 @@
               <h6><a class="bottom-links" href="">Diversity Initiatives</a></h6>
               <h6><a class="bottom-links" href="">Submit Website Bugs</a></h6>
             </div>
-            <p align="center">Copyright 2001-2016</p>
+            <p>Copyright 2001-2016</p>
           </div>
 
       </div>
